# vudoku

./: .gitignore  LICENSE  Pipfile  README.md  classifier.py  extractor.py  main.py  pyproject.toml  requirements.txt  scavenger.py
.github/workflows/: codeql-analysis.yml.bkp.txt
papers/project/journal/: references.bib  vudoku.tex
papers/project/report/final/: project-report.tex  references.bib
papers/seminar/src/: 00-preabmle.tex  01-title.tex  02-certificate.tex  07-prerequisites.tex  09-gpt3p1.tex  references.bib
presentation/: README.md
presentation/vudoku/: package-lock.json  package.json  slides.md  table-of-contents.md
presentation/vudoku/views/: objectives.md  overview.md  research.md
source/: acquire_grid.py  acquire_sudoku.py  classify_digits.py  extract_digits.py  solve_sudoku.py  validate_sudoku.py
src/: artist.py  builder.py  classifier.py  environment.yml  extractor.py  main.py  main_alt.py  requirements.txt  scavenger.py  solver.py
src/vudoku/: __init__.py  builder.py  classifier.py  extractor.py  main.py  scavenger.py  solver.py
status-report/: 210112-status-report.tex  references.bib
vudoku/: builder.py  classifier.py  extractor.py  main.py  scavenger.py  solver.py
white-paper/Learn-LaTeX/: trial-01.tex  trial-02.tex
white-paper/project-report/Digit Recognition - A review/: digit-recognition-a-review.tex
white-paper/project-report/Report/src/: project-report.tex  references.bib
white-paper/project/journal/: preprint.sty
white-paper/project/report/final/: project-report.tex  references.bib
white-paper/project/report/preliminary/: references.bib
white-paper/seminar-report/src/: 00-preabmle.tex  01-title.tex  02-certificate.tex  03-acknowledgement.tex  04-abstract.tex  05-introduction.tex  06-Overview_Preq.tex  06-overview.tex  07-prerequisites.tex  08-GPT3P2.tex  08-gpt3p1.tex  10-Conclusion.tex  10-gpt3p2.tex  10-gpt3p3.tex  11-gpt3p3.tex  12-conclusion.tex  references.bib  seminar-report.tex
white-paper/seminar/src/: 03-acknowledgement.tex  04-abstract.tex  06-overview.tex  08-gpt3p0.tex
white-paper/templates/arXiv-01/: arXiv-01.tex
